--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1,4 +1,4 @@
-#Work on getting expenses to show on PDF via ALExpense (update expense list and get rid of old expense code)
+#Collect bank_accounts as a DAList
 #For other financial forms, need to ask how much they pay and how much someone else pays for the expenses. When user is filling out fee waiver only, just need to know what they pay, so keep it simple.
 #Work on getting self employment to fill in
 
@@ -1303,14 +1303,7 @@ review:
       **Vehicles**
       
       % for item in vehicles:
-        ${ item.description }
-          
-        - Market value: ${ currency(item.market_value) }
-          
-        - Amount owed: ${ currency(item.amount_owed) }
-          
-        - Net value: ${ currency(item.net_value) }
-          
+      * ${ item.description }          
       % endfor
       % if not vehicles.there_are_any:
       - None
@@ -1320,10 +1313,7 @@ review:
       **Real estate**
 
       % for item in real_estate:
-        ${ item.description }
-        
-        * Net value = ${ currency(item.net_value) }
-        
+      * ${ item.description }       
       % endfor
       % if not real_estate.there_are_any:
       - None
@@ -1469,6 +1459,31 @@ edit:
   - market_value
   - amount_owed
 ---
+---
+continue button field: real_estate.revisit
+question: |
+  Edit real estate
+subquestion: |
+  ${ real_estate.table }
+
+  ${ real_estate.add_action() }
+---
+table: real_estate.table
+rows: real_estate
+columns:
+  - Description: |
+      row_item.description if defined("row_item.description") else ""
+  - Market value: |
+      currency(row_item.market_value) if defined("row_item.market_value") else ""
+  - Amount owed: |
+      currency(row_item.amount_owed) if defined("row_item.amount_owed") else ""
+  - Net value: |
+      currency(row_item.net_value) if defined("row_item.net_value") else ""
+edit:
+  - description
+  - market_value
+  - amount_owed
+---
 id: download VT_fee_waiver
 event: VT_fee_waiver_download
 question: |
@@ -1476,7 +1491,7 @@ question: |
 subquestion: |
   ${ download_screen_instructions }
 
-  ${ action_button_html(url_action('review_divorce'), label='Edit your answers', color='info') }
+  ${ action_button_html(url_action('review_VT_fee_waiver'), label='Edit your answers', color='info') }
   
   
   ${ al_user_bundle.download_list_html() }
@@ -1494,7 +1509,7 @@ progress: 100
 ---
 objects:
   - VT_fee_waiver_post_interview_instructions: ALDocument.using(title="Instructions", filename="VT_fee_waiver_next_steps.docx", enabled=True, has_addendum=False, default_overflow_message=AL_DEFAULT_OVERFLOW_MESSAGE)
-  - VT_fee_waiver_attachment: ALDocument.using(title="Fee Waiver — Vermont court form 600-00228", filename="VT_fee_waiver.pdf", enabled=True, has_addendum=True, default_overflow_message=AL_DEFAULT_OVERFLOW_MESSAGE)
+  - VT_fee_waiver_attachment: ALDocument.using(title="Fee waiver form 600-00228", filename="VT_fee_waiver.pdf", enabled=True, has_addendum=True, default_overflow_message=AL_DEFAULT_OVERFLOW_MESSAGE)
 ---
 objects:
   - al_user_bundle: ALDocumentBundle.using(elements=[VT_fee_waiver_post_interview_instructions,VT_fee_waiver_attachment], filename="VT_fee_waiver.pdf_package.pdf", title="All forms to download for your records", enabled=True)
@@ -1516,11 +1531,11 @@ attachments:
           % if defined("trial_court.division_abbr"):
             ${ trial_court.division_abbr.upper()  }
           % elif trial_court_division == "family":
-          FAMILY          
+          **FAMILY**          
           % elif trial_court_division == "probate":
-          PROBATE          
+          **PROBATE**          
           % elif trial_court_division == "civil":
-          CIVIL          
+          **CIVIL**          
           % endif
       - "docket_number": ${ docket_number }
       - "trial_court_county": ${(trial_court.address.county)}
