--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1,4 +1,4 @@
-#Collect bank_accounts as a DAList
+#Create ALAssetLists for bank, real estate and vehicle? or use ALVehicle?
 #For other financial forms, need to ask how much they pay and how much someone else pays for the expenses. When user is filling out fee waiver only, just need to know what they pay, so keep it simple.
 #Work on getting self employment to fill in
 
@@ -19,6 +19,7 @@ objects:
   - public_benefits: ALIncomeList
   - other_incomes: ALIncomeList
   - expenses: ALExpenseList
+  - bank_assets: ALAssetList
 
 ---
 comment: |
@@ -97,84 +98,89 @@ code: |
   # Below sets the user_role by asking a question.
   # You can set user_role directly instead to either 'plaintiff' or 'defendant'
   nav.set_section('intro')
+  which_financial_forms
+  VT_fee_waiver_intro
   important_notes_to_user
   #user_ask_role
 
-  if expenses.selected_types.any_true():
-    expenses.there_are_any = True
-    expenses.gathered  
-  review_expenses
+  if which_financial_forms == "fee_waiver_form":
+
+    if bank_assets.selected_types.any_true():
+      bank_assets.there_are_any = True
+      bank_assets.gathered
+      
+    if expenses.selected_types.any_true():
+      expenses.there_are_any = True
+      expenses.gathered
   
-  nav.set_section('your_income')
-  if public_benefits.selected_types.any_true():
-    public_benefits.there_are_any = True
-    public_benefits.gathered
+
+    if public_benefits.selected_types.any_true():
+      public_benefits.there_are_any = True
+      public_benefits.gathered
     
-  nav.set_section('case_info')
-  case_name
-  
-  if public_benefits.there_are_any:
-    user_qualifies_interstitial
-    employed
-    jobs.gather()
-    review_jobs
-  else:
-    set_progress(33)
-    employed
-    jobs.gather()
-    review_jobs
+    interview_order_VT_fee_waiver = True
+--- 
+#    nav.set_section('your_income')
+#    if public_benefits.there_are_any:
+#      user_qualifies_interstitial
+#      employed
+#      jobs.gather()
+#      review_jobs
+#    else:
+#      set_progress(33)
+#      employed
+#      jobs.gather()
+#      review_jobs
+#  
+#    if other_incomes.selected_types.any_true():
+#      other_incomes.there_are_any = True
+#      other_incomes.gathered
+#    else:
+#      other_incomes.there_are_any = False
+#  
+#
+#    #set_progress(50)  
+#    
+#
+#    set_progress(16)
+#    nav.set_section('about_you')
+#    users.gather()
+#    set_parts(subtitle=str(users))
+#    users[0].address.address
+#    users[0].daytime_phone_number
+#    users[0].email
+#    household_size
+#    nav.set_section('case_info')
+#    case_name
+#    trial_court_division
+#    docket_number
+#  
+#    
+#    nav.set_section('your_expenses')
+#  
+#    set_progress(70)
+#    nav.set_section('your_assets')
+#
+#    vehicles.there_are_any
+#    if vehicles.there_are_any: 
+#      vehicles.gather()
+#      user_sees_vehicle_net_values
+#    real_estate.there_are_any
+#    if real_estate.there_are_any: 
+#      real_estate.gather()
+#      user_sees_real_estate_net_values
+#  
+#    other_assets.there_are_any
+#    if other_assets.there_are_any: 
+#      other_assets.gather()
+#      user_sees_other_assets_values
+#    set_progress(85)
+#    
+#    nav.set_section('reasons')
+#    other_reasons_why_cannot_afford
+#    set_progress(98)
 
-  if other_incomes.selected_types.any_true():
-    other_incomes.there_are_any = True
-    other_incomes.gathered
-  else:
-    other_incomes.there_are_any = False
 
-  #users1_income_monthly_total
-  #users1_income_annual_total
-  #user_sees_income_total
-  #set_progress(50)  
-  
-  trial_court_division
-  docket_number
-  set_progress(16)
-  nav.set_section('about_you')
-  users.gather()
-  set_parts(subtitle=str(users))
-  users[0].address.address
-  users[0].daytime_phone_number
-  users[0].email
-  household_size
-  
-
-  
-  nav.set_section('your_expenses')
-
-  set_progress(70)
-  nav.set_section('your_assets')
-  assets
-  vehicles.there_are_any
-  if vehicles.there_are_any: 
-    vehicles.gather()
-    user_sees_vehicle_net_values
-  real_estate.there_are_any
-  if real_estate.there_are_any: 
-    real_estate.gather()
-    user_sees_real_estate_net_values
-  accounts_cash
-  if accounts_cash:
-    users1_assets_cash_total
-    user_sees_cash_assets_total
-  other_assets.there_are_any
-  if other_assets.there_are_any: 
-    other_assets.gather()
-    user_sees_other_assets_values
-  set_progress(85)
-  
-  nav.set_section('reasons')
-  other_reasons_why_cannot_afford
-  set_progress(98)
-  interview_order_VT_fee_waiver = True
 ---
 ###################### Main order ######################
 comment: |
@@ -183,7 +189,6 @@ comment: |
 mandatory: True
 code: |
   al_intro_screen
-  VT_fee_waiver_intro
   interview_order_VT_fee_waiver
 
   # Store anonymous data for analytics / statistics
@@ -196,7 +201,7 @@ code: |
       },
   )
   nav.set_section('review_VT_fee_waiver')
-  trial_court.address.county
+
   VT_fee_waiver_preview_question
   nav.set_section('signature')
   signature_date
@@ -205,7 +210,7 @@ code: |
   nav.set_section('download')
   VT_fee_waiver_download
 ---
-
+  #trial_court.address.county
 ---
 variable name: public_benefits_terms_ordered
 data: !!omap
@@ -529,8 +534,28 @@ fields:
       minlength: |
         You cannot continue unless you agree to the terms of use.        
 continue button field: al_intro_screen
----    
- 
+---
+id: which financial forms
+question: |
+  The financial forms you want
+subquestion: |
+  This interview can lead you through filling out 3 financial forms for family court:
+  
+  * APPLICATION TO WAIVE FILING FEES AND SERVICE COSTS -- commonly called the fee waiver from
+  
+  * FINANCIAL AFFIDAVIT (400-813A) -- commonly called form 813A
+  
+  * FINANCIAL AFFIDAVIT (400-813B) Property and Assets -- commonly called form 813B
+  
+  These forms collect similar information. You have a choice about which ones you can do.
+fields:
+  - "Forms to fill out": which_financial_forms
+    input type: radio
+    choices:
+      - "Fill out only the fee waiver form": fee_waiver_form
+      - "Fill out all three forms": all_financial_forms
+
+---
 id: VT fee waiver intro
 continue button field: VT_fee_waiver_intro
 question: |
@@ -1095,53 +1120,38 @@ subquestion: |
 ---
 
 
-
-
-###############
-    
+###############BANK ASSETS####################
 ---
-id: Bank accounts and cash
+variable name: bank_assets_terms_ordered
+data: !!omap
+  - checking account: "Checking account"
+  - savings account: "Savings account"
+  - cash on hand: "Cash on hand"
+---
+id: are there bank assets
+#bank_assets
 question: |
-  Bank accounts and cash
-fields:
-  - "Do you have bank accounts or cash on hand?": accounts_cash
-    datatype: yesnoradio
-  - note: |
-      Enter the amounts of the accounts or cash that you have.
-    show if: accounts_cash      
-  - "Checking accounts": users1_assets_checking_accounts
-    datatype: currency
-    min: 0
-    show if: accounts_cash
-    required: False
-  - "Cash on hand": users1_assets_cash_on_hand
-    datatype: currency
-    min: 0
-    show if: accounts_cash
-    required: False
-  - "Savings accounts": users1_assets_savings_accounts
-    datatype: currency
-    min: 0
-    show if: accounts_cash
-    required: False
----
-mandatory: True
-code: | 
-  users1_assets_cash_total = sum_if_defined('users1_assets_checking_accounts', 
-      'users1_assets_cash_on_hand',
-      'users1_assets_savings_accounts')
----
-id: Display total cash assets
-mandatory: True
-show if: accounts_cash
-continue button field: user_sees_cash_assets_total
-question: |
-  Total cash assets
+  Do you have money on hand or in the bank?
 subquestion: |
-  You said that your total bank accounts and cash assets are:
-    ${ currency(users1_assets_cash_total) }
-       
-  If this is not correct, go back one screen.
+   Check any that apply to you.
+fields:
+  - no label: bank_assets.selected_types
+    datatype: checkboxes
+    code: |
+      bank_assets_terms_ordered
+---
+id: info for each asset
+generic object: ALAssetList
+question: |
+  About your ${ bank_assets[i].source }
+fields:
+  - Current value: x[i].market_value
+    datatype: currency
+    required: False
+---
+
+
+
 ---
 id: More information
 question: |
@@ -1298,6 +1308,21 @@ review:
       
   - note: |
       **Assets**    
+      
+  - Edit: bank_assets.revisit
+    button: |
+      **Bank accounts and cash**
+      
+      % for item in bank_assets:
+      * ${ item.display_name }
+      % endfor
+
+      % if not bank_assets.there_are_any:
+      - None
+      % endif      
+      
+      
+      
   - Edit: vehicles.revisit
     button: |
       **Vehicles**
@@ -1320,23 +1345,7 @@ review:
       % endif
       
       
-      
-  - Edit: users1_assets_checking_accounts
-    button: |
-      **Checking accounts**:
-      ${ currency(users1_assets_checking_accounts) }
-  - Edit: users1_assets_cash_on_hand
-    button: |
-      **Cash on hand**:
-      ${ currency(users1_assets_cash_on_hand) }
-  - Edit: users1_assets_savings_accounts
-    button: |
-      **Savings accounts**:
-      ${ currency(users1_assets_savings_accounts) }
-  - Edit: users1_assets_cash_total
-    button: |
-      **Total cash assets**:
-      ${ currency(users1_assets_cash_total) }
+     
   - Edit: users1_assets_other_0_market_value
     button: |
       **Other asset - market value**:
@@ -1433,6 +1442,28 @@ columns:
 edit:
   - source
   - value
+---
+
+
+---
+continue button field: bank_assets.revisit
+question: |
+  Edit bank accounts and cash
+subquestion: |
+  ${ bank_assets.table }
+
+  ${ bank_assets.add_action() }
+---
+table: bank_assets.table
+rows: bank_assets
+columns:
+  - Source: |
+      row_item.source if defined("row_item.source") else ""
+  - Value: |
+      currency(row_item.market_value) if defined("row_item.market_value") else ""
+edit:
+  - source
+  - market_value
 ---
 ---
 continue button field: vehicles.revisit
