finished real estate and got expenses to show on PDF, too

--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1,4 +1,4 @@
-#Finish attachment block for real estate
+
 #Create ALAssetList for vehicles? or use ALVehicle?
 #Work on getting self employment to fill in
 #For other financial forms, need to ask how much they pay and how much someone else pays for the expenses. When user is filling out fee waiver only, just need to know what they pay, so keep it simple.
@@ -822,8 +822,9 @@ data: !!omap
   - property tax: "Property taxes"
   - medical: "Medical costs"
   - health insurance: "Health insurance"
-  - auto insurance: "Auto insurance"
   - auto loan: "Auto loan payment"
+  - auto insurance: "Auto insurance"
+  - other insurance: "Other insurance"
   - child support: "Child support payment"
   - other: "Other expenses that you can describe"
 ---
@@ -986,18 +987,6 @@ subquestion: |
   % endfor
   
 ################ REAL ESTATE ################
-#---
-#code: |
-#  real_estate[i].description
-#  real_estate[i].amount_owed
-#  real_estate[i].complete=True
-#---
-####To determine the net value for real estate###
-#code: |
-#  total = real_estate[i].market_value
-#  total -= real_estate[i].amount_owed
-#  real_estate[i].net_value = total
----
 ---
 variable name: real_estate.terms_ordered
 data: !!omap
@@ -1041,12 +1030,6 @@ code: |
   other_assets[i].description
   other_assets[i].market_value
   other_assets[i].complete=True
----
-###To determine the net value### Not needed on form
-#code: |
-#  total = other_assets[i].market_value
-#  total -= other_assets[i].amount_owed
-#  other_assets[i].net_value = total
 ---
 id: Other assets
 question: |
@@ -1607,19 +1590,19 @@ attachments:
       - "users1_income_monthly_total": ${ currency(jobs.total(source=["full time","part time"],times_per_year=12) + other_incomes.total(times_per_year=12)) }
       - "users1_income_annual_total": ${ currency(jobs.total(source=["full time","part time"],times_per_year=1) + other_incomes.total(times_per_year=1)) }
       
-      - "users1_expenses_rent_mortgage_monthly_amount": ${ currency(expenses.total(source=["rent"],times_per_year=12)) }
-      - "users1_expenses_electric_monthly_amount": ${ currency(users1_expenses_electric_monthly_amount) }      
-      - "users1_expenses_phone_monthly_amount": ${ currency(users1_expenses_phone_monthly_amount) }
-      - "users1_expenses_fuel_monthly_amount": ${ currency(users1_expenses_fuel_monthly_amount) }
-      - "users1_expenses_food_monthly_amount": ${ currency(users1_expenses_food_monthly_amount) }
-      - "users1_expenses_clothes_monthly_amount": ${ currency(users1_expenses_clothes_monthly_amount) }
-      - "users1_expenses_medical_monthly_amount": ${ currency(users1_expenses_medical_monthly_amount) }
-      - "users1_expenses_child_support_monthly_amount": ${ currency(users1_expenses_child_support_monthly_amount) }
-      - "users1_expenses_auto_loan_monthly_amount": ${ currency(users1_expenses_auto_loan_monthly_amount) }
-      - "users1_expenses_property_tax_monthly_amount": ${ currency(users1_expenses_property_tax_monthly_amount) }
-      - "users1_expenses_all_insurance_monthly_amount": ${ currency(users1_expenses_all_insurance_monthly_amount) }
-      - "users1_expenses_other_monthly_amount": ${ currency(users1_expenses_other_monthly_amount) }
-      - "users1_expenses_monthly_total": ${ currency(users1_expenses_monthly_total) }
+      - "users1_expenses_rent_mortgage_monthly_amount": ${ currency(expenses.total(source=["rent"],times_per_year=12) + expenses.total(source=["mortgage"],times_per_year=12)) }   
+      - "users1_expenses_electric_monthly_amount": ${ currency(expenses.total(source=["electric"],times_per_year=12)) }    
+      - "users1_expenses_phone_monthly_amount": ${ currency(expenses.total(source=["phone"],times_per_year=12)) }
+      - "users1_expenses_fuel_monthly_amount": ${ currency(expenses.total(source=["fuel"],times_per_year=12)) }
+      - "users1_expenses_food_monthly_amount": ${ currency(expenses.total(source=["food"],times_per_year=12)) }
+      - "users1_expenses_clothes_monthly_amount": ${ currency(expenses.total(source=["clothing"],times_per_year=12)) }
+      - "users1_expenses_medical_monthly_amount": ${ currency(expenses.total(source=["medical"],times_per_year=12)) }
+      - "users1_expenses_child_support_monthly_amount": ${ currency(expenses.total(source=["child support"],times_per_year=12)) }
+      - "users1_expenses_auto_loan_monthly_amount": ${ currency(expenses.total(source=["auto loan"],times_per_year=12)) }
+      - "users1_expenses_property_tax_monthly_amount": ${ currency(expenses.total(source=["property tax"],times_per_year=12)) }
+      - "users1_expenses_all_insurance_monthly_amount": ${ currency(expenses.total(source=["health insurance", "auto insurance", "other insurance"],times_per_year=12)) }
+      - "users1_expenses_other_monthly_amount": ${ currency(expenses.total(source=["other"],times_per_year=12)) }
+      - "users1_expenses_monthly_total": ${ currency(expenses.total(times_per_year=12)) }
       
       - "assets_yes": |
           % if vehicles.target_number > 0:
@@ -1662,17 +1645,20 @@ attachments:
       - "users1_assets_real_estate_0_net_value": ${ currency((real_estate[0].market_value) - (real_estate[0].balance)) }
 
       - "users1_assets_real_estate_1_description": ${ real_estate[1].description }
-      - "users1_assets_real_estate_1_market_value": ${ currency(users1_assets_real_estate_1_market_value) }
-      - "users1_assets_real_estate_1_amount_owed": ${ currency(users1_assets_real_estate_1_amount_owed) }
-      - "users1_assets_real_estate_1_net_value": ${ currency(users1_assets_real_estate_1_net_value) }
+      - "users1_assets_real_estate_1_market_value": ${ currency(real_estate[1].market_value) }
+      - "users1_assets_real_estate_1_amount_owed": ${ currency(real_estate[1].balance) }
+      - "users1_assets_real_estate_1_net_value": ${ currency((real_estate[1].market_value) - (real_estate[1].balance)) }
+      
       - "users1_assets_checking_accounts": ${ currency(bank_assets.market_value(source=["checking account"])) }
       - "users1_assets_cash_on_hand": ${ currency(bank_assets.market_value(source=["cash on hand"])) }
       - "users1_assets_savings_accounts": ${ currency(bank_assets.market_value(source=["savings account"])) }
-      - "users1_assets_cash_total": ${ currency(bank_assets.market_value) }
+      - "users1_assets_cash_total": ${ currency(bank_assets.market_value()) }
+      
       - "users1_assets_other_0_market_value": ${ currency(other_assets[0].market_value) }
       - "users1_assets_other_0_description": ${ other_assets[0].description }
       - "users1_assets_other_1_market_value": ${ currency(other_assets[1].market_value) }
       - "users1_assets_other_1_description": ${ other_assets[1].description }
+      
       - "other_reasons_why_cannot_afford": ${VT_fee_waiver_attachment.safe_value("other_reasons_why_cannot_afford")}
       - "signature_date": ${ signature_date }
       - "users1_signature": ${ users[0].signature_if_final(i) }
